--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.277",
-    "gatsby-cli": "^1.1.57",
-    "gatsby-image": "^1.0.51",
-    "gatsby-link": "^1.6.44",
-    "gatsby-paginate": "^1.0.16",
+    "gatsby": "^1.9.279",
+    "gatsby-cli": "^1.1.58",
+    "gatsby-image": "^1.0.55",
+    "gatsby-link": "^1.6.46",
+    "gatsby-paginate": "^1.1.1",
     "gatsby-plugin-i18n": "^0.4.2",
     "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-source-contentful": "^1.3.52",
-    "gatsby-transformer-remark": "^1.7.41",
+    "gatsby-source-contentful": "^1.3.54",
+    "gatsby-transformer-remark": "^1.7.44",
     "intl": "^1.2.5",
-    "react-helmet": "^5.2.0",
-    "react-intl": "^2.4.0",
-    "slash": "^2.0.0"
+    "react-helmet": "^5.2.1",
+    "react-intl": "^2.9.0",
+    "slash": "^2.0.0",
+    "swiper": "^6.0.4"
   },
   "keywords": [
     "gatsby"
@@ -31,6 +32,6 @@
   },
   "devDependencies": {
     "dotenv": "^5.0.1",
-    "prettier": "^1.13.4"
+    "prettier": "^1.19.1"
   }
 }
