--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gatsby-image": "^1.0.55",
     "gatsby-link": "^1.6.46",
     "gatsby-paginate": "^1.1.1",
-    "gatsby-plugin-google-analytics": "1.0.20-12",
+    "gatsby-plugin-google-analytics": "^2.4.0",
     "gatsby-plugin-i18n": "^0.4.2",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-source-contentful": "^1.3.54",
