--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.279",
-    "gatsby-cli": "^1.1.58",
-    "gatsby-image": "^1.0.55",
-    "gatsby-link": "^1.6.46",
+    "gatsby": "^2.30.1",
+    "gatsby-cli": "^2.17.0",
+    "gatsby-image": "^2.9.0",
+    "gatsby-link": "^2.9.0",
     "gatsby-paginate": "^1.1.1",
-    "gatsby-plugin-i18n": "^0.4.2",
-    "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-source-contentful": "^1.3.54",
-    "gatsby-transformer-remark": "^1.7.44",
+    "gatsby-plugin-i18n": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-source-contentful": "^4.4.0",
+    "gatsby-transformer-remark": "^2.14.0",
+    "graphql": "^15.4.0",
     "intl": "^1.2.5",
-    "react-helmet": "^5.2.1",
-    "react-intl": "^2.9.0",
-    "slash": "^2.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-intl": "^5.10.14",
+    "slash": "^3.0.0",
     "swiper": "^6.0.4"
   },
   "keywords": [
@@ -31,7 +34,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "dotenv": "^5.0.1",
-    "prettier": "^1.19.1"
+    "dotenv": "^8.2.0",
+    "prettier": "^2.2.1"
   }
 }
